...
    "Edit Rule" : {

    },
    "Edit Seerr Account" : {

    },
    "Edit Server" : {

    },
    "Edit Servers" : {

    },
    "Edit Tracker" : {
...
            "state" : "new",
            "value" : "Free: %1$@ of %2$@"
          }
        }
      }
    },
    "Full API Key" : {

    },
    "General" : {

    },
    "Generated" : {
...
    "P%lld" : {

    },
    "Parental Controls" : {

    },
    "Password" : {

    },
    "Path" : {

    },
    "Path is on the Jellyfin server or container." : {
...
    "Proxies" : {

    },
    "Proxy name" : {

    },
    "qBittorrent" : {

    },
    "qBittorrent already has \"%@\". Trawl can remove that qBittorrent job without deleting files, then retry this grab." : {

    },
    "qBittorrent Server" : {
...
    "Running" : {

    },
    "Runs" : {

    },
    "SABnzbd" : {

    },
    "SABnzbd has no categories configured." : {

    },
    "SABnzbd has no news servers configured." : {
...
    "User" : {

    },
    "User Actions" : {

    },
    "Username" : {

    },
    "Uses default save path" : {
      "comment" : "A description of a category's save path.",
      "isCommentAutoGenerated" : true
    },
...
